Navmenu protected links only for Admin

--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -27,10 +27,14 @@
             <i class="bi bi-person-circle mx-2 text-dark" style="font-size: 2rem;"></i>
           </button>
           <ul class="dropdown-menu dropdown-menu-end" data-bs-popper="static">
-            {% if app.user %}
-              <li><a href="{{ path('app_logout') }}" class="dropdown-item">Logout</a></li>
-              <li><a href="{{ path('app_register') }}" class="dropdown-item">Register</a></li>
-              <li><a href="{{ path('app_user_index') }}" class="dropdown-item">User Dashboard</a></li>
+            {% if app.user  %}
+              {% if app.user.roles[0] == "ROLE_ADMIN" %}
+                <li><a href="{{ path('app_register') }}" class="dropdown-item">Registrer Utilisateur</a></li>
+                <li><a href="{{ path('app_user_index') }}" class="dropdown-item">User Dashboard</a></li>
+                <li><a href="{{ path('app_logout') }}" class="dropdown-item">Logout</a></li>
+              {% else %}
+                <li><a href="{{ path('app_logout') }}" class="dropdown-item">Logout</a></li>
+              {% endif %}
             {% else %}
               <li><a href="{{ path('app_login') }}" class="dropdown-item">Login</a></li>
             {% endif %}
