--- a/templates/permission/index.html.twig
+++ b/templates/permission/index.html.twig
@@ -32,12 +32,5 @@
       </table>
     </div>
     <br />
-    <a href="{{ path('app_permission_new') }}">Create new</a>
-    <br />
-    <a href="{{ path('app_franchise_index') }}">Liste de Franchises</a>
-    <br />
-    <a href="{{ path('app_partner_index') }}">Liste des Structures</a>
-    <br />
-    <a href="{{ path('app_dashboard') }}">Page d'accueil</a>
-    <br /> 
+    <a href="{{ path('app_permission_new') }}" class="btn btn-primary">Create new</a>
 {% endblock %}
