--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 mb-5 custom-form">
+      <h1>Editer Utilisateur</h1>
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_user_index') }}">back to list</a>
-
-    {{ include('user/_delete_form.html.twig') }}
+      {{ include('user/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+      {{ include('user/_delete_form.html.twig') }}
+      <a href="{{ path('app_user_index') }}" class="mx-3">Retour à la liste</a>
+    </section>
 {% endblock %}
