--- a/templates/franchise/edit.html.twig
+++ b/templates/franchise/edit.html.twig
@@ -1,13 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Franchise{% endblock %}
+{% block title %}Editer Franchise{% endblock %}
 
 {% block body %}
-    <h1>Edit Franchise</h1>
+<section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
-    {{ include('franchise/_form.html.twig', {'button_label': 'Update'}) }}
+    <h1>Editer Franchise</h1>
 
-    <a href="{{ path('app_franchise_index') }}">back to list</a>
-
+    {{ include('franchise/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     {{ include('franchise/_delete_form.html.twig') }}
+    <a href="{{ path('app_franchise_index') }}" class="btn btn-warning">Retourner à la liste</a>
+
+
+</section>
 {% endblock %}
