--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -34,22 +34,24 @@
               {% for franchise in franchises %}
                 <div class="col">
                   <div class="card h-100">
-                    <img src="https://images.pexels.com/photos/7676548/pexels-photo-7676548.jpeg" class="card-img-top" alt="today fit">
-                    <div class="card-body">
-                      <small>#{{ franchise.id }}</small>
-                      <h5 class="card-title">{{ franchise.Name }}</h5>
-                      <p class="card-text">{{ franchise.Email }}</p>
-                      <p>Permissions:</p>
-                      <div class="mb-3">
-                        {% for permission in franchise.permissions %}
-                          <span class="btn btn-sm btn-outline-warning my-1">{{ permission.name }}</span>
-                        {% endfor %}
+                    <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}" class="text-decoration-none text-dark">
+                      <img src="https://images.pexels.com/photos/7676548/pexels-photo-7676548.jpeg" class="card-img-top" alt="today fit">
+                      <div class="card-body">
+                        <small>#{{ franchise.id }}</small>
+                        <h5 class="card-title">{{ franchise.Name }}</h5>
+                        <p class="card-text">{{ franchise.Email }}</p>
+                        <p>Permissions:</p>
+                        <div class="mb-3">
+                          {% for permission in franchise.permissions %}
+                            <span class="btn btn-sm btn-success my-1">{{ permission.name }}</span>
+                          {% endfor %}
+                        </div>
+                        <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-primary">Modifier</a>
                       </div>
-                      <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-primary">Modifier</a>
-                    </div>
-                    <div class="card-footer">
-                      <small class="text-muted">Franchisé depuis le 25/05/2016</small>
-                    </div>
+                      <div class="card-footer">
+                        <small class="text-muted">Franchisé depuis le 25/05/2016</small>
+                      </div>
+                    </a>  
                   </div>
                 </div>
               {% endfor %}
@@ -86,7 +88,7 @@
                     </td>
                     <td>{{ franchise.Active ? 'Yes' : 'No' }}</td>
                     <td>
-                        <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}" class="btn btn-sm btn-outline-success">Voir plus</a>
+                        <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}" class="btn btn-sm btn-outline-success">Voir détails</a>
                         <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-sm btn-outline-info">Modifier</a>
                     </td>
                   </tr>
