--- a/templates/franchise/show.html.twig
+++ b/templates/franchise/show.html.twig
@@ -3,20 +3,23 @@
 {% block title %}Franchise{% endblock %}
 
 {% block body %}
+<section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
+
     <h1>Franchise</h1>
 
     <table class="table">
+        {# <img src="https://images.pexels.com/photos/7676548/pexels-photo-7676548.jpeg" class="card-img-top" alt="today fit"> #}
         <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ franchise.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ franchise.Name }}</td>
             </tr>
             <tr>
-                <th>Email</th>
+                <th>E-mail</th>
                 <td>{{ franchise.Email }}</td>
             </tr>
             <tr>
@@ -35,12 +38,11 @@
         </tbody>
     </table>
 
-    <br />
-    <a href="{{ path('app_franchise_index') }}">Liste des Franchises</a>
-    <br />
-    <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}">Modifier</a>
-    <br />
+    <section class="container">
+      <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-primary">Modifier</a>
+      <a href="{{ path('app_franchise_index') }}" class="btn btn-warning">Liste des Franchises</a>
+      {{ include('franchise/_delete_form.html.twig') }}
+    </section>
     
-
-    {{ include('franchise/_delete_form.html.twig') }}
+</section>
 {% endblock %}
