--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -3,7 +3,12 @@
 {% block title %}Partner index{% endblock %}
 
 {% block body %}
-    <h1>Partner index</h1>
+    {# Header section #}
+    <section class="d-flex flex-row justify-content-between align-items-center">
+      <h1>Structures</h1>
+      <a href="{{ path('app_partner_new') }}" class="btn btn-danger">Nouvelle Structure</a>
+    </section>
+    {# Header section #}
     <div class="table-responsive">
       <table class="table">
           <thead>
@@ -39,8 +44,8 @@
                     </div>
                   ' }}</td>
                   <td>
-                      <a href="{{ path('app_partner_show', {'id': partner.id}) }}">Voir plus</a>
-                      <a href="{{ path('app_partner_edit', {'id': partner.id}) }}">Modifier</a>
+                      <a href="{{ path('app_partner_show', {'id': partner.id}) }}" class="btn btn-sm btn-outline-success">Voir détails</a>
+                      <a href="{{ path('app_partner_edit', {'id': partner.id}) }}" class="btn btn-sm btn-outline-info">Modifier</a>
                   </td>
               </tr>
           {% else %}
@@ -51,25 +56,4 @@
           </tbody>
       </table>
     </div>
-    <br />
-    <a href="{{ path('app_partner_new') }}">Ajouter une nouvelle Structure</a>
-    <br />
-    <a href="{{ path('app_franchise_index') }}">Liste de Franchises</a>
-    <br />
-    <a href="{{ path('app_permission_index') }}">Liste de Permissions</a>
-    <br />
-    <a href="{{ path('app_dashboard') }}">Page d'accueil</a>
-    <br />
-    <button type="button" class="btn btn-secondary"
-        data-bs-toggle="tooltip" data-bs-placement="top"
-        data-bs-custom-class="custom-tooltip"
-        data-bs-title="This top tooltip is themed via CSS variables.">
-  Custom tooltip
-</button>
-
-<script>
-const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-</script>
-
 {% endblock %}
