--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Partner{% endblock %}
 
 {% block body %}
+<section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
+
     <h1>Partner</h1>
 
     <table class="table">
@@ -40,11 +42,9 @@
         </tbody>
     </table>
     
-    <br />
-    <a href="{{ path('app_partner_index') }}">Liste des Structures</a>
-    <br />
-    <a href="{{ path('app_partner_edit', {'id': partner.id}) }}">Modifier</a>
-    <br />
+    <a href="{{ path('app_partner_edit', {'id': partner.id}) }}" class="btn btn-primary">Modifier</a>
+    <a href="{{ path('app_partner_index') }}" class="btn btn-warning">Liste des Structures</a>
 
     {{ include('partner/_delete_form.html.twig') }}
+</section>
 {% endblock %}
