--- a/templates/permission/index.html.twig
+++ b/templates/permission/index.html.twig
@@ -3,7 +3,13 @@
 {% block title %}Permission index{% endblock %}
 
 {% block body %}
-    <h1>Permission index</h1>
+<div class="container">
+    {# Header section #}
+    <section class="d-flex flex-row justify-content-between align-items-center">
+      <h1>Permissions</h1>
+      <a href="{{ path('app_permission_new') }}" class="btn btn-danger">Nouvelle Permission</a>
+    </section>
+    {# Header section #}
     <div class="table-responsive">
       <table class="table">
           <thead>
@@ -19,18 +25,17 @@
                   <td>{{ permission.id }}</td>
                   <td>{{ permission.name }}</td>
                   <td>
-                      <a href="{{ path('app_permission_show', {'id': permission.id}) }}">show</a>
-                      <a href="{{ path('app_permission_edit', {'id': permission.id}) }}">edit</a>
+                      <a href="{{ path('app_permission_show', {'id': permission.id}) }}" class="btn btn-sm btn-outline-success">Voir détails</a>
+                      <a href="{{ path('app_permission_edit', {'id': permission.id}) }}" class="btn btn-sm btn-outline-info">Modifier</a>
                   </td>
               </tr>
           {% else %}
               <tr>
-                  <td colspan="3">no records found</td>
+                  <td colspan="3">Il n'y a pas de permissions</td>
               </tr>
           {% endfor %}
           </tbody>
       </table>
     </div>
-    <br />
-    <a href="{{ path('app_permission_new') }}" class="btn btn-primary">Create new</a>
+</div>
 {% endblock %}
