User views updated

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,17 +3,22 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+    {# Header section #}
+    <section class="d-flex flex-row justify-content-between align-items-center">
+      <h1>Utilisateurs</h1>
+      <a href="{{ path('app_register') }}" class="btn btn-danger">Registrer Nouvel Utilisateur</a>
+    </section>
+    {# Header section #}
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Email</th>
+                <th>E-mail</th>
                 <th>Roles</th>
-                <th>IsVerified</th>
-                <th>IsPasswordReset</th>
-                <th>actions</th>
+                <th>Verifié?</th>
+                <th>Password modifié?</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -25,8 +30,8 @@
                 <td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
                 <td>{{ user.passwordReset ? 'Yes' : 'No' }}</td>
                 <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">détails</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">editer</a>
+                    <a href="{{ path('app_user_show', {'id': user.id}) }}" class="btn btn-sm btn-outline-success">Voir détails</a>
+                    <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-sm btn-outline-info">Modifier</a>
                 </td>
             </tr>
         {% else %}
@@ -36,7 +41,4 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_register') }}" class="btn btn-outline-warning">Registrer nouvel utilisateur</a>
-
 {% endblock %}
