--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 mb-5 custom-form">
+    <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 mb-5 custom-form">
       <h1>Editer Utilisateur</h1>
 
       {{ include('user/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+      <a href="{{ path('app_user_index') }}" class="btn btn-warning mr-3">Retour à la liste</a>
       {{ include('user/_delete_form.html.twig') }}
-      <a href="{{ path('app_user_index') }}" class="mx-3">Retour à la liste</a>
     </section>
 {% endblock %}
