--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,7 +3,9 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+<section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
+
+    <h1>{{ user.email }}</h1>
 
     <table class="table">
         <tbody>
@@ -26,9 +28,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
-
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-
+    <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-primary">Modifier</a>
     {{ include('user/_delete_form.html.twig') }}
+    
+    <a href="{{ path('app_user_index') }}" class="btn btn-warning">Retourner à la liste</a>
+</section>
 {% endblock %}
