--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,3 +1,7 @@
+body {
+  padding-bottom: 120px;
+}
+
 footer {
   position: fixed;
   bottom: 0px;
@@ -15,5 +19,9 @@ footer {
   margin-top: 15px;
   margin-bottom: 5px;
   margin-right: 10px;
+}
+
+.btn-indicator {
+  cursor: none;
 }
 /*# sourceMappingURL=custom.css.map */
