--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,10 +1,9 @@
 body {
   padding-bottom: 120px;
-}
-
-footer {
-  position: fixed;
-  bottom: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: rebeccapurple;
 }
 
 .custom-form {
