--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,7 +14,7 @@
           {{ form_row(registrationForm.plainPassword, {
               label: 'Mot de passe'
           }) }}
-          {{ form_row(registrationForm.agreeTerms) }}
+          {# {{ form_row(registrationForm.agreeTerms) }} #}
 
           <button type="submit" class="btn btn-warning">Registrer</button>
       {{ form_end(registrationForm) }}
