User Registration Form and Franchise New Form updated

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -25,3 +25,12 @@ footer{
 .btn-indicator{
   cursor: none; 
 }
+
+// REGISTRATION FORM
+.registration-form{
+  ul{
+    list-style: none;
+    color: white;
+    background: lightcoral;
+  }
+}
