--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,7 +6,7 @@
     {% for flash_error in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form">
+    <section class="container col-md-8 col-xl-6 bg-light py-5 px-4 custom-form registration-form">
       <h1>Registrer un nouvel utilisateur</h1>
 
       {{ form_start(registrationForm) }}
@@ -14,6 +14,7 @@
           {{ form_row(registrationForm.plainPassword, {
               label: 'Mot de passe'
           }) }}
+          {{ form_row(registrationForm.roles) }}
           {# {{ form_row(registrationForm.agreeTerms) }} #}
 
           <button type="submit" class="btn btn-warning">Registrer</button>
