--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,5 +1,5 @@
 body {
-  padding-bottom: 120px;
+  /* padding-bottom: 120px; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
