--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -27,42 +27,42 @@
       {# Tab Content #}
       <div class="tab-content" id="myTabContent">
           
-        {# Card section #}
+        {# < Card section #}
         <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-          <section>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-              {% for franchise in franchises %}
-                <div class="col">
-                  <div class="card h-100">
-                    <a href="{{ path('app_franchise_show', {'id': franchise.id}) }}" class="text-decoration-none text-dark">
-                      <img src="https://images.pexels.com/photos/7676548/pexels-photo-7676548.jpeg" class="card-img-top" alt="today fit">
-                      <div class="card-body">
-                        <small>#{{ franchise.id }}</small>
-                        <h5 class="card-title">{{ franchise.Name }}</h5>
-                        <small class="card-text">(E-mail perso: {{ franchise.email }})</small>
-                        <p class="card-text">{{ franchise.user.email }}</p>
-                        <p>Permissions:</p>
-                        <div class="mb-3">
-                          {% for permission in franchise.permissions %}
-                            <span class="btn btn-sm btn-success my-1">{{ permission.name }}</span>
-                          {% endfor %}
-                        </div>
-                        <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-primary">Modifier</a>
-                      </div>
-                      <div class="card-footer">
-                        <small class="text-muted">Franchisé depuis le 25/05/2016</small>
-                      </div>
-                    </a>  
+        <section class='container card-section my-5'>
+          <div class="row">
+            <div class='d-flex flex-column flex-md-row justify-content-md-between align-items-center mb-4'>
+              <div class='d-flex flex-column flex-lg-row'>
+                <h2 class="fw-bold lh-1 mb-0 mb-md-0 me-md-3 text-uppercase mb-2">MES CLUBS</h2>
+                <h2 class="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
+              </div>
+              <div class="d-flex flex-column flex-lg-row align-items-center">
+                <form class="d-flex flex-row align-items-center gap-3">
+                  <div class="form-check form-switch ">
+                    <input class="form-check-input" type="checkbox" id="switchActive" />
+                    <label class="form-check-label" for="switchActive">Actives</label>
                   </div>
-                </div>
-              {% endfor %}
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                  <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+                </form>
+              </div>
             </div>
-            </div>
-          </section>
+
+            {% for franchise in franchises %}
+              {{ include('franchise/_card.html.twig', {
+                'button_label': 'Go!',
+                'name' : franchise.name,
+                'permissions' : franchise.permissions
+                }) }}
+            {% endfor %}
+
+          </div>
+        </section>
         </div>
-        {# Card section #}
-          
-        {# Table section #}
+        {# > Card section #}
+
+        
+        {# < Table section #}
         <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
           <section class="table-responsive">
             <table class="table">
@@ -102,7 +102,7 @@
             </table>
           </section>
         </div>
-        {# Table section #}
+        {# > Table section #}
         
       </div>
       {# Tab Content #}
