Description and Image fields added to Franchise and Partner with front end Index and forms modified

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -79,6 +79,8 @@ form fieldset{
 }
 #partner_permissions {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 #partner_permissions input[type="checkbox"]{
     visibility: hidden;
