--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -9,59 +9,126 @@
       <a href="{{ path('app_partner_new') }}" class="btn btn-danger">Nouvelle Structure</a>
     </section>
     {# Header section #}
-    <div class="table-responsive">
-      <table class="table">
-          <thead>
-              <tr>
-                  <th>Id</th>
-                  <th>Name</th>
-                  <th>Email</th>
-                  <th>User</th>
-                  <th>Address</th>
-                  <th>Permissions</th>
-                  <th>Active</th>
-                  <th>Actions</th>
-              </tr>
-          </thead>
-          <tbody>
-          {% for partner in partners %}
-              <tr>
-                  <td>{{ partner.id }}</td>
-                  <td>{{ partner.Name }}</td>
-                  <td>{{ partner.Email }}</td>
-                  <td>
-                    {% if partner.user %}
-                      {{ partner.user.email }}
-                    {% else %}
-                      <i>Acun utilisateur asigné</i>
-                    {% endif %}
-                  </td>
-                  <td>{{ partner.Address }}</td>
-                  <td>
-                    {% for permission in partner.permissions %}
-                      <span class="btn btn-sm btn-warning">{{ permission.name }}</span>
-                    {% endfor %}
-                  </td>
-                  <td>{{ partner.Active ? '
-                    <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+
+    {# Tab section #}
+    <section class="container-fluid">
+
+      {# Tab navigation #}
+      <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Accueil</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Vue en table</button>
+        </li>
+      </ul>
+      {# Tab navigation #}
+
+      {# Tab Content #}
+      <div class="tab-content" id="myTabContent">
+
+
+        {# < Card section #}
+        <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+          <section class='container card-section my-5'>
+            <div class="row">
+              <div class='d-flex flex-column flex-md-row justify-content-md-between align-items-center mb-4'>
+                <div class='d-flex flex-column flex-lg-row'>
+                  <h2 class="fw-bold lh-1 mb-0 mb-md-0 me-md-3 text-uppercase mb-2">MES CLUBS</h2>
+                  <h2 class="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
+                </div>
+                <div class="d-flex flex-column flex-lg-row align-items-center">
+                  <form class="d-flex flex-row align-items-center gap-3">
+                    <div class="form-check form-switch ">
+                      <input class="form-check-input" type="checkbox" id="switchActive" />
+                      <label class="form-check-label" for="switchActive">Actives</label>
                     </div>
-                  ' : '
-                    <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
-                    </div>
-                  ' }}</td>
-                  <td>
-                      <a href="{{ path('app_partner_show', {'id': partner.id}) }}" class="btn btn-sm btn-outline-success">Voir détails</a>
-                      <a href="{{ path('app_partner_edit', {'id': partner.id}) }}" class="btn btn-sm btn-outline-info">Modifier</a>
-                  </td>
-              </tr>
-          {% else %}
-              <tr>
-                  <td colspan="6">no records found</td>
-              </tr>
-          {% endfor %}
-          </tbody>
-      </table>
-    </div>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+                  </form>
+                </div>
+              </div>
+
+              {% for partner in partners %}
+                {{ include('partner/_card.html.twig', {
+                  'button_label': 'Go!',
+                  'name' : partner.name,
+                  'permissions' : partner.permissions,
+                  'image': partner.image,
+                  'description': partner.description
+                  }) }}
+              {% endfor %}
+
+            </div>
+          </section>
+        </div>
+        {# > Card section #}
+
+        {# < Table section #}
+        <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+
+          <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>User</th>
+                        <th>Address</th>
+                        <th>Permissions</th>
+                        <th>Active</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for partner in partners %}
+                    <tr>
+                        <td>{{ partner.id }}</td>
+                        <td>{{ partner.Name }}</td>
+                        <td>{{ partner.Email }}</td>
+                        <td>
+                          {% if partner.user %}
+                            {{ partner.user.email }}
+                          {% else %}
+                            <i>Acun utilisateur asigné</i>
+                          {% endif %}
+                        </td>
+                        <td>{{ partner.Address }}</td>
+                        <td>
+                          {% for permission in partner.permissions %}
+                            <span class="btn btn-sm btn-warning">{{ permission.name }}</span>
+                          {% endfor %}
+                        </td>
+                        <td>{{ partner.Active ? '
+                          <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+                          </div>
+                        ' : '
+                          <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+                          </div>
+                        ' }}</td>
+                        <td>
+                            <a href="{{ path('app_partner_show', {'id': partner.id}) }}" class="btn btn-sm btn-outline-success">Voir détails</a>
+                            <a href="{{ path('app_partner_edit', {'id': partner.id}) }}" class="btn btn-sm btn-outline-info">Modifier</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="6">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+          </div>
+
+        </div>
+        {# > Table section #}
+
+      </div>
+      {# Tab Content #}
+
+    </section>
+    {# Tab section #}
 {% endblock %}
