--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -106,6 +106,24 @@ form fieldset{
     color: white;
 }
 
+// PARTNER FORM SECTION
+#search_persona{
+  display:flex;
+  flex-direction:row;
+  justify-content: space-between;
+  max-height: 40px;
+  margin-bottom: 50px;
+}
+#search_persona input{
+  width: 400px;
+}
+
+// .search-icon::after{
+//   font-family: "Font Awesome 5 Free"; 
+//   font-weight: 900; 
+//   content: "\f007";
+// }
+
 // CARD SECTION
 .card-section{
   max-width: 1200px;
