--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -10,6 +10,11 @@
     </section>
     {# Header section #}
 
+    {# Form Search section #}
+    <section class="d-flex flex-row justify-content-between align-items-center">
+    </section>
+    {# Form Search section #}
+
     {# Tab section #}
     <section class="container-fluid">
 
@@ -38,6 +43,8 @@
                   <h2 class="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
                 </div>
                 <div class="d-flex flex-column flex-lg-row align-items-center">
+                  {{ form(form) }}
+
                   <form class="d-flex flex-row align-items-center gap-3">
                     <div class="form-check form-switch ">
                       <input class="form-check-input" type="checkbox" id="switchActive" />
