--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -44,6 +44,8 @@
                 </div>
                 <div class="d-flex flex-column flex-lg-row align-items-center">
                   {{ form(form) }}
+                </div>
+                {# <div class="d-flex flex-column flex-lg-row align-items-center">
 
                   <form class="d-flex flex-row align-items-center gap-3">
                     <div class="form-check form-switch ">
@@ -53,7 +55,8 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
                   </form>
-                </div>
+                
+                </div> #}
               </div>
 
               {% for partner in partners %}
