--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -78,17 +78,19 @@ form fieldset{
   padding: 10px;
 }
 #partner_permissions,
-#franchise_edit_permissions {
+#franchise_edit_permissions,
+#search_partner {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 #partner_permissions input[type="checkbox"],
-#franchise_edit_permissions input[type="checkbox"] {
+#franchise_edit_permissions input[type="checkbox"],
+#search_partner input[type="checkbox"] {
     visibility: hidden;
 }
 #partner_permissions input[type="checkbox"] + label,
-#franchise_edit_permissions input[type="checkbox"] + label {
+#franchise_edit_permissions input[type="checkbox"] + label{
     background-color: white; /* Green */
     border: 1px solid #ced4da;
     color: #ced4da;
@@ -99,32 +101,26 @@ form fieldset{
     font-size: 16px;
     border-radius:5px;
 }
+
+#search_partner input[type="checkbox"] + label {
+  background-color: white; /* Green */
+  border: 1px solid #ced4da;
+  color: #ced4da;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  //display: inline-block;
+  font-size: 16px;
+  border-radius:5px;
+}
+
 #partner_permissions input[type="checkbox"]:checked + label,
-#franchise_edit_permissions input[type="checkbox"]:checked + label {
+#franchise_edit_permissions input[type="checkbox"]:checked + label,
+#search_partner input[type="checkbox"]:checked + label {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
 }
-
-// PARTNER FORM SECTION
-
-// #search_partner {
-//   display: flex;
-//   flex-direction: row;
-//   flex-wrap: wrap;
-//   justify-content: space-between;
-//   gap: 15px;
-
-//   input {
-//     width: 400px;
-//   }
-// }
-
-// .search-icon::after{
-//   font-family: "Font Awesome 5 Free"; 
-//   font-weight: 900; 
-//   content: "\f007";
-// }
 
 // CARD SECTION
 .card-section{
