--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
-    <h1>Partner</h1>
+    <h1>{{ partner.Name }}</h1>
 
     <table class="table">
         <tbody>
