--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -47,7 +47,7 @@
                 </form>
               </div>
             </div>
-
+            {% set link = "/franchise/show/" %}
             {% for franchise in franchises %}
               {{ include('franchise/_card.html.twig', {
                 'button_label': 'Go!',
@@ -56,7 +56,8 @@
                 'name' : franchise.name,
                 'permissions' : franchise.permissions,
                 'image': franchise.image,
-                'description': franchise.description
+                'description': franchise.description,
+                'link': link
                 }) }}
             {% endfor %}
 
