Pagination added to Partner

--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -64,6 +64,7 @@
             </div>
           </section>
 
+          {# < Pagination section #}
           <nav class="d-flex justify-content-center">
             <ul class="pagination">
               {% if page != 1 %}
@@ -93,6 +94,8 @@
               {% endif %}
             </ul>
           </nav>
+          {# > Pagination section #}
+
 
         </div>
         {# > Card section #}
