All data added to Franchise and Partner in Table view mode

--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     {# Header section #}
     <section class="d-flex flex-row justify-content-between align-items-center">
-      <h1>Franchisés</h1>
+      <h1>Franchises</h1>
       <a href="{{ path('app_franchise_new') }}" class="btn btn-danger">Nouvelle Franchise</a>
     </section>
     {# Header section #}
@@ -116,7 +116,7 @@
                 </tr>
               </thead>
               <tbody>
-                {% for franchise in franchises %}
+                {% for franchise in allFranchises %}
                   <tr>
                     <td>{{ franchise.id }}</td>
                     <td>{{ franchise.Name }}</td>
