--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -130,7 +130,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for partner in partners %}
+                {% for partner in allPartners %}
                     <tr>
                         <td>{{ partner.id }}</td>
                         <td>{{ partner.Name }}</td>
