--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-warning px-5">
+<nav class="navbar navbar-expand-lg bg-primary px-5">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ path('app_dashboard') }}">
       <img src="{{ asset('build/images/logo_white.png')}}" alt="Today Fit Logo" width="150px">
