--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
     <body>
 
           {# Header #}
-          <div class="container-fluid bg-warning text-center py-1"><i>Ce site web est une site de démonstration</i></div>
+          <div class="container-fluid bg-warning text-center py-1"><small><i>Ce site web est une site de démonstration</i></small></div>
           {{ include('_nav.html.twig') }}
 
           {# Messages #}
