--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -110,6 +110,7 @@
                   <th>Id</th>
                   <th>Name</th>
                   <th>Email</th>
+                  <th>Structures</th>
                   <th>Permissions</th>
                   <th>Active</th>
                   <th>Actions</th>
@@ -121,6 +122,11 @@
                     <td>{{ franchise.id }}</td>
                     <td>{{ franchise.Name }}</td>
                     <td>{{ franchise.Email }}</td>
+                    <td>
+                      {% for partner in franchise.partner %}
+                        <span class="btn btn-sm btn-outline-danger">{{ partner.name }}</span>
+                      {% endfor %}
+                    </td>
                     <td>
                       {% for permission in franchise.permissions %}
                         <span class="btn btn-sm btn-warning">{{ permission.name }}</span>
