--- a/templates/franchise/show.html.twig
+++ b/templates/franchise/show.html.twig
@@ -5,8 +5,10 @@
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
-    <h1>Franchise</h1>
-
+    <div class="d-flex flex-row align-items-center justify-content-between">
+      <h1>{{ franchise.name }}</h1>
+      {{ include('franchise/_delete_form.html.twig') }}
+    </div>
     <table class="table">
         {# <img src="https://images.pexels.com/photos/7676548/pexels-photo-7676548.jpeg" class="card-img-top" alt="today fit"> #}
         <tbody>
@@ -26,23 +28,67 @@
                 <th>Permissions</th>
                 <td>
                   {% for permission in franchise.permissions %}
-                    <span>| {{ permission.name }} </span>
+                    <small class="border border-success px-2 py-1 rounded"> {{ permission.name }} </small>
                   {% endfor %}
-                  |
                 </td>
             </tr>
             <tr>
-                <th>Active</th>
-                <td>{{ franchise.Active ? 'Yes' : 'No' }}</td>
+                <th>Active?</th>
+                <td>
+                  {% if franchise.Active %}
+                    <span class="border border-success px-2 py-1 rounded text-success">Oui</span>
+                  {% else %}
+                    <span class="border border-danger px-2 py-1 rounded text-danger">Non</span>
+                  {% endif %}
+                </td>
             </tr>
+
         </tbody>
     </table>
 
-    <section class="container">
+    <section class="container d-grid gap-2 col-xl-6">
       <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-primary">Modifier</a>
-      <a href="{{ path('app_franchise_index') }}" class="btn btn-warning">Liste des Franchises</a>
-      {{ include('franchise/_delete_form.html.twig') }}
+      <a href="{{ path('app_franchise_index') }}" class="btn btn-outline-primary">Liste des Franchises</a>
     </section>
     
+</section>
+
+<section class="container border border-primary py-4 px-4 custom-form mt-3">
+  {# < Card Content section #}
+  <section class='container card-section my-5'>
+    <div class="row">
+      <div class='d-flex flex-column flex-xl-row justify-content-md-between align-items-center mb-4'>
+        
+        <div class='d-flex flex-column flex-sm-row mb-sm-3'>
+          <h2 class="fw-bold lh-1 mb-0 mb-md-0 me-md-3 text-uppercase mb-2 me-4">MES CLUBS</h2>
+          <h2 class="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
+        </div>
+
+        <div class="d-flex flex-column flex-lg-row search-form-partner">
+          {# {{ form(form) }} #}
+        </div>
+
+      </div>
+
+      {% set link = "/partner/show/" %}
+      {% for partner in franchise.partner %}
+        {{ include('partner/_card.html.twig', {
+          'button_label': 'Go!',
+          'id': partner.id,
+          'name' : partner.name,
+          'permissions' : partner.permissions,
+          'image': partner.image,
+          'description': partner.description,
+          'link': link,
+          }) }}
+      {% else %}
+        <div class="alert alert-danger" role="alert">
+          Il n'y a pas de resultat pour votre recherche
+        </div>
+      {% endfor %}
+
+    </div>
+  </section>
+  {# > Card Content section #}
 </section>
 {% endblock %}
