Securing access and limiting access by roles

--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -18,6 +18,10 @@
         <li class="nav-item">
           <a class="nav-link active" href="{{ path('app_permission_index') }}">Permissions</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="{{ path('app_ma_franchise_show') }}">Ma Franchise</a>
+        </li>
+        
       {# {% endif %} #}
       </ul>
       <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
