--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -7,7 +7,11 @@
 
     <div class="d-flex flex-row align-items-center justify-content-between">
       <h1>{{ partner.Name }}</h1>
-      {{ include('partner/_delete_form.html.twig') }}
+    
+      {% if is_granted("ROLE_ADMIN") %}
+        {{ include('partner/_delete_form.html.twig') }}
+      {% endif %}
+    
     </div>
     <table class="table">
         <tbody>
@@ -48,10 +52,13 @@
 
         </tbody>
     </table>
+    
+    {% if is_granted("ROLE_ADMIN") %}
+      <section class="container d-grid gap-2 col-xl-6">
+        <a href="{{ path('app_partner_edit', {'id': partner.id}) }}" class="btn btn-primary">Modifier</a>
+        <a href="{{ path('app_partner_index') }}" class="btn btn-warning">Liste des Structures</a>
+      </section>
+    {% endif %}
 
-    <section class="container d-grid gap-2 col-xl-6">
-      <a href="{{ path('app_partner_edit', {'id': partner.id}) }}" class="btn btn-primary">Modifier</a>
-      <a href="{{ path('app_partner_index') }}" class="btn btn-warning">Liste des Structures</a>
-    </section>
 </section>
 {% endblock %}
