--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -47,6 +47,14 @@
           </ul>
         </li>
       </ul>
+      <section class="mx-2">
+        <div class="dark-mode" data-mode="dark" id="moon">
+          <i class="bi bi-moon-fill"></i>
+        </div>
+        <div class="dark-mode hidden-icon" data-mode="light" id="sun">
+          <i class="bi bi-brightness-high-fill"></i>
+        </div>
+      </section>
     </div>
   </div>
 </nav>
