--- a/templates/franchise/show.html.twig
+++ b/templates/franchise/show.html.twig
@@ -63,7 +63,7 @@
   <section class="container border border-primary py-4 px-4 custom-form mt-3 mb-5">
     {# < Card Content section #}
     <section class='container card-section my-5'>
-      <div class="row">
+      <div class="row d-flex justify-content-center">
         <div class='d-flex flex-column flex-xl-row justify-content-md-between align-items-center mb-4'>
           
           <div class='d-flex flex-column flex-sm-row mb-sm-3'>
